--- a/npkpir_23/web/ksiegowa/sub/pit_oblicz.xhtml
+++ b/npkpir_23/web/ksiegowa/sub/pit_oblicz.xhtml
@@ -482,6 +482,25 @@
                             </p:column>
                         </p:dataTable>
                     </p:panelGrid>
+                     <p:panelGrid  columns="3" style="margin-left: auto; margin-right: auto;">
+                    <p:selectBooleanCheckbox value="#{zestawienieRyczaltView.dolaczpkpir}" label="dołącz ewid.przych." itemLabel="dołącz pkpir">
+                        <p:ajax event="change" partialSubmit="true"/>
+                    </p:selectBooleanCheckbox>
+                    <p:selectBooleanCheckbox value="#{zestawienieRyczaltView.dolaczdeklvat}" label="dołącz dekl.vat" itemLabel="dołącz dekl.vat">
+                        <p:ajax event="change" partialSubmit="true"/>
+                    </p:selectBooleanCheckbox>
+                    <p:selectBooleanCheckbox value="#{zestawienieRyczaltView.dolaczjpk}" label="dołącz jpk" itemLabel="dołącz jpk">
+                        <p:ajax event="change" partialSubmit="true"/>
+                    </p:selectBooleanCheckbox>
+                </p:panelGrid>
+                <p:panelGrid  columns="1" style="margin-left: auto; margin-right: auto; width: 1300px;">
+                    <h:outputText value="po zaznaczeniu czekboksów i kliknięciu wyślij należy poczekać aż otworzą się wygenerowane pliki pdf" style="color:green;"/>
+                </p:panelGrid>
+                 <p:panelGrid  columns="1" style="margin-left: auto; margin-right: auto; width: 1300px;">
+                     <p:textEditor allowFormatting="true" placeholder="dodatkowa wiadomośc w mailu do podatnika" height="200" value="#{zestawienieRyczaltView.dodatkowatresmaila}" style="max-width:1200px;">
+                         <p:ajax event="blur" partialSubmit="true"/>
+                     </p:textEditor>
+                         </p:panelGrid>
                 </p:panelGrid>
             </h:form>
         </p:tab>
