--- a/npkpir_23/web/wspolny/sub/ewidencjaprzychodow.xhtml
+++ b/npkpir_23/web/wspolny/sub/ewidencjaprzychodow.xhtml
@@ -48,7 +48,7 @@
                           rowKey="#{wpis.idDok}" selection="#{ewidencjaPrzychodowView.selDokument}" selectionMode="single" 
                           filteredValue="#{ewidencjaPrzychodowView.listaFiltered}"
                           emptyMessage="W danym miesiącu nie było żadnych zapisów"
-                          style="width: 1800px; height: 600px; overflow-y: scroll;" widgetVar="dokKsiega"  styleClass="grid" 
+                          style="max-width: 1800px; max-height: 600px; overflow-y: scroll;" widgetVar="dokKsiega"  styleClass="grid" 
                           > 
                 <f:facet name="header">  
                     <h:outputText value="Ewidencja przychodów" />
