--- a/npkpir_23/web/wspolny/sub/bilanse/wyniknarastajacoksiegowa.xhtml
+++ b/npkpir_23/web/wspolny/sub/bilanse/wyniknarastajacoksiegowa.xhtml
@@ -21,7 +21,7 @@
 
         </style>
         <h:form id="formsymulacjanarastajaco">
-            <p:panelGrid columns="6" style="margin-left: 2%;" >
+            <p:panelGrid columns="7" style="margin-left: 2%;" >
                 <h:outputText value="m-c" style="margin-right: 10px;"/>
                 <p:column>
                     <p:selectOneMenu id="miesiacWpisu" value="#{WpisView.miesiacWpisu}">
@@ -38,11 +38,14 @@
                     </p:commandButton>
                 </p:column>
                 <h:outputText value="     "/>
-                <p:commandButton id="drukujsymulacjanar" value="#{mgs.drukuj}" action="#{sesjaView.dodajwydruk()}" actionListener="#{symulacjaWynikuNarastajacoView.drukuj()}" style="width: 120px; margin-left: 20px; display: none;" oncomplete="wydruksymulacjawynikunar('#{WpisView.podatnikObiekt.nip}')"/><!--
+                <p:commandButton id="drukujsymulacjanar" value="#{mgs.drukuj}" action="#{sesjaView.dodajwydruk()}" actionListener="#{symulacjaWynikuNarastajacoView.drukuj()}" style="width: 120px; margin-left: 20px; display: none;" 
+                                 /><!--
                 <p:commandButton value="#{mgs.drukujszcz}" actionListener="#{symulacjaWynikuView.drukuj(2)}" style="width: 120px; margin-left: 15px;" oncomplete="wydruksymulacjawyniku('#{WpisView.podatnikObiekt.nip}')"/>-->
                  <p:splitButton id="xlsbutton" value="dane w formacie XLS" actionListener="#{xLSSymulacjaView.zachowajSymulacjewXLS(0)}" style=" margin-left: 15px; display: none;" global="false" ajax="false">
                     <p:menuitem value="XLS przychody szcz." actionListener="#{xLSSymulacjaView.zachowajSymulacjewXLS(1)}" global="false" ajax="false"/>
             </p:splitButton>
+                <p:commandButton id="drukujpakiet" value="mail do klienta" action="#{sesjaView.dodajwydruk()}" 
+                                 actionListener="#{mailKlientFKView.wyslijPit()}" style="width: 120px; margin-left: 20px;" />
             </p:panelGrid>
             
             <p:dataTable lazy="false"  id="tablicasymulacjasumanar" value="#{symulacjaWynikuNarastajacoView.listamiesiecy}" var="loop_wyn" rowKey="#{loop_wyn.id}"
