--- a/npkpir_23/web/ksiegowa/sub/podatnikust/paramdeklvatnadwyzka.xhtml
+++ b/npkpir_23/web/ksiegowa/sub/podatnikust/paramdeklvatnadwyzka.xhtml
@@ -31,9 +31,11 @@
                     </p:dataTable>
                 </p:panelGrid>
                 <p:panel header="wybierz parametry aktualne" style="width: 990px;"/>
-                <p:panelGrid id="parametryp1" columns="5" >
-                    <h:outputText value="rok podatkowy: "/><p:selectOneMenu value="#{podatnikView.paramDeklVatNadwyzka.rokOd}"><f:selectItems value="#{roki.rokiListString}"/></p:selectOneMenu>
-                    <h:outputText value="miesiąc od: "/><p:selectOneMenu value="#{podatnikView.paramDeklVatNadwyzka.mcOd}"><f:selectItems value="#{mce.mceList}"/></p:selectOneMenu>
+                <p:panelGrid id="parametryp1" columns="6" >
+                    <h:outputText value="rok podatkowy: "/>
+                    <p:selectOneMenu value="#{podatnikView.paramDeklVatNadwyzka.rokOd}"><f:selectItems value="#{roki.rokiListString}"/></p:selectOneMenu>
+                    <h:outputText value="miesiąc od: "/>
+                    <p:selectOneMenu value="#{podatnikView.paramDeklVatNadwyzka.mcOd}"><f:selectItems value="#{mce.mceList}"/></p:selectOneMenu>
                     <p:selectOneMenu value="#{podatnikView.paramDeklVatNadwyzka.parametr}" >
                         <f:selectItem itemValue="do przeniesienia" itemLabel="do przeniesienia"/> 
                         <f:selectItem itemValue="180" itemLabel="180 dni"/>
