--- a/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_nowyklient.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_nowyklient.xhtml
@@ -41,13 +41,13 @@
                         <p:ajax event="query" global="false"/>
                     </p:autoComplete>
                 </p:panelGrid>
-                <p:panelGrid id="polawprowadzania2" columns="5"  style="width: 100%;">
+                <p:panelGrid id="polawprowadzania2" columns="6"  style="width: 100%;">
                     <h:outputLabel value="ulica" style="font-weight: 700"/>
                     <h:outputLabel value="dom" style="font-weight: 700"/>
                     <h:outputLabel value="lokal" style="font-weight: 700"/>
                     <h:outputLabel value="kraj" style="font-weight: 700"/>
                     <h:outputLabel value="email" style="font-weight: 700"/>
-
+                    <h:outputLabel value="" style="font-weight: 700"/>
                     <p:inputText id="ulicaPole" value="#{KlView.selected.ulica}"   style="width: 200px" required="true" requiredMessage="Pole ulica nie może byc puste"
                                  onblur="wykresllokal_wykazklientow_dialog('formXNowyKlient:ulicaPole');">
                     </p:inputText>
@@ -69,6 +69,7 @@
                     </p:inputText>
                     <p:commandButton value="dodaj" action="#{KlView.dodajKlientafk(dokfkView.selected, dokfkView.ewidencjaVatRK)}"
                                      oncomplete="skopiujdanenowegoklientafk();" style="width: 120px;display: none;" styleClass="uibuttonmui"/>
+                     <h:outputLabel value="" style="font-weight: 700"/>
                 </p:panelGrid>
             </p:panel>
         </h:form>
