--- a/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_nowyklient_import.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_nowyklient_import.xhtml
@@ -40,12 +40,13 @@
         <h:form id="form_dialog_nowyklientimport" >
             <p:panel header="Dodaj nowego klienta. Uwaga, ten formularz nie wyszukuje w basie GUS">
                 <p:focus id="focus" for="polawprowadzania"  />
-                <p:panelGrid id="polawprowadzania" columns="5" >
+                <p:panelGrid id="polawprowadzania" columns="6" >
                     <h:outputLabel value="nip/zagraniczny w formacie DE0000000000" style="font-weight: 700"/>
                     <h:outputLabel value="nazwa pełna" style="font-weight: 700"/>
                     <h:outputLabel value="nazwa skrocona" style="font-weight: 700"/>
                     <h:outputLabel value="kod pocztowy" style="font-weight: 700"/>
                     <h:outputLabel value="miejscowość" style="font-weight: 700"/>
+                     <h:outputLabel value="" style="font-weight: 700"/>
                     <p:inputText id="nipPole" value="#{importDokumentowGlownyView.selectedimport.nip}" maxlength="20" style="width: 200px">
                         <p:watermark for="nipPole" value="bez -" /> 
                     </p:inputText>
