--- a/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_rk_ewidencjaVAT.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_rk_ewidencjaVAT.xhtml
@@ -10,12 +10,13 @@
               resizable="false"  onShow="ustawdialogrk('dialogewidencjavatRK','dialogpierwszy',900,220);" modal="true"
               closeOnEscape="true" onHide="ukryjdialogvatrk();" >
         <h:form id="ewidencjavatRK"> 
-            <p:panelGrid id="paneldatydokumentu" columns="5" style="width: 700px;"  styleClass="uipanelGrid0">
+            <p:panelGrid id="paneldatydokumentu" columns="6" style="width: 700px;"  styleClass="uipanelGrid0">
                 <h:outputText value="data dokumentu"/>
                 <h:outputText value="data operacji gosp."/>
                 <h:outputText value="dane kontrahenta"/>
                 <h:outputText value="nr wł dok."/>
                 <h:outputText value="opis transakcji" style="width: 160px;"/>
+                 <h:outputLabel value="" style="font-weight: 700"/>
                 <h:inputText id="data1DialogVAT" value="#{dokfkView.ewidencjaVatRK.datadokumentu}"
                              onblur="ustawDateFKRK(#{WpisView.rokWpisu}, #{WpisView.miesiacWpisu}, 'data1DialogVAT');
                                              $(this).removeClass('ui-state-focus');
