--- a/npkpir_23/web/wspolny/sub/faktura/dialog_nowyklient_faktura.xhtml
+++ b/npkpir_23/web/wspolny/sub/faktura/dialog_nowyklient_faktura.xhtml
@@ -39,12 +39,13 @@
                         <p:ajax event="select" partialSubmit="true" global="false"/>
                     </p:autoComplete>
                 </p:panelGrid>
-                <p:panelGrid id="polawprowadzania2" columns="5"  style="width: 100%;">
+                <p:panelGrid id="polawprowadzania2" columns="6"  style="width: 100%;">
                     <h:outputLabel value="ulica" style="font-weight: 700"/>
                     <h:outputLabel value="dom" style="font-weight: 700"/>
                     <h:outputLabel value="lokal" style="font-weight: 700"/>
                     <h:outputLabel value="kraj" style="font-weight: 700"/>
                     <h:outputLabel value="email" style="font-weight: 700"/>
+                     <h:outputLabel value="" style="font-weight: 700"/>
                     <p:inputText id="ulicaPole" value="#{KlView.selected.ulica}"   style="width: 200px" required="true" requiredMessage="Pole ulica nie może byc puste"
                                  onblur="wykresllokal_wykazklientow_dialog('formnkfaktura:ulicaPole');"/>
                     <p:inputText id="domPole" value="#{KlView.selected.dom}" style="width: 200px" required="true" requiredMessage="Pole dom nie może byc puste"
