--- a/npkpir_23/web/wspolny/sub/fakturadodatki.xhtml
+++ b/npkpir_23/web/wspolny/sub/fakturadodatki.xhtml
@@ -11,9 +11,10 @@
         <p:tab title="pozycje fakturowane">
             <h:form id="form2">
                 <p:growl life="3600" showDetail="true"/>
-                <p:panelGrid columns="5">
+                <p:panelGrid columns="6">
                     <h:outputText value="rok"/>
                     <h:outputText value="mc"/>
+                    <h:outputText value=""/>
                     <h:outputText value=""/>
                     <h:outputText value=""/>
                     <h:outputText value=""/>
@@ -30,11 +31,13 @@
                     <h:outputText value=""/>
                     <h:outputText value=""/>
                     <h:outputText value=""/>
+                    <h:outputText value=""/>
                     <h:outputText value="kontrahent"/>
                     <h:outputText value="dodatek"/>
                     <h:outputText value="ilość"/>
                     <h:outputText value="permanentny"/>
                     <h:outputText value="kwota"/>
+                    <h:outputText value=""/>
                     <p:selectOneMenu widgetVar="kontrpole" id="kontrpole" value="#{fakturaDodPozycjaKontrahentView.selected.kontrahent}" style="width: 400px;" converter="#{klientConv1}" filter="true" filterMatchMode="contains">
                         <f:selectItem itemLabel="wybierz"  noSelectionOption="true" />
                         <f:selectItems value="#{fakturaDodPozycjaKontrahentView.klienci}" var="opipi" itemLabel="#{opipi.nazwapodatnika}" itemValue="#{opipi}" />
@@ -46,6 +49,7 @@
                     <p:inputNumber id="ilość" value="#{fakturaDodPozycjaKontrahentView.selected.ilosc}" decimalPlaces="0" minValue="0" maxValue="100" size="9" style="text-align: right;" required="true" requiredMessage="minimalna wartośc to 0"/>
                     <p:selectBooleanCheckbox value="#{fakturaDodPozycjaKontrahentView.selected.permanentny}"/>
                     <bcf:inputpl80 value="#{fakturaDodPozycjaKontrahentView.selected.kwotaindywid}"/>
+                    <h:outputText value=""/>
                     <p:commandButton value="dodaj" actionListener="#{fakturaDodPozycjaKontrahentView.dodaj}" update="@(form) akordeon:listapozycji:lista" style="width: 120px;"/>
 
                 </p:panelGrid>
@@ -53,7 +57,7 @@
             </h:form>
             <p:separator/>
             <h:form id="listapozycji">
-                <p:panelGrid columns="5">
+                <p:panelGrid columns="6">
                     <p:commandButton value="generuj permanentne" actionListener="#{fakturaDodPozycjaKontrahentView.generujpermanentne()}" style="width: 120px;" update="akordeon:listapozycji:lista akordeon:form3 akordeon:listapozycji2:lista" />
                     <p:commandButton value="zachowaj wygenerowane" actionListener="#{fakturaDodPozycjaKontrahentView.zachowajpermanentne()}" style="width: 120px;margin-left: 20px;" update="akordeon:listapozycji:lista akordeon:form3 akordeon:listapozycji2:lista" />
                     <p:outputLabel for="boxczywszystkie" value="pokaż tylko puste"/>
