--- a/npkpir_23/web/wspolny/sub/wykazklientow.xhtml
+++ b/npkpir_23/web/wspolny/sub/wykazklientow.xhtml
@@ -13,12 +13,13 @@
                     <p:panel menuTitle="Wprowadzanie/edytowanie danych nowych klientów" header="1Wprowadzanie danych nowych klientów (* - dane fakultatywne)"  >
                         <p:growl life="3600"  id="mess_add" ><p:autoUpdate/></p:growl>
                         <p:focus id="focus" context="polawprowadzania" />
-                        <p:panelGrid id="polawprowadzania" columns="5" >
+                        <p:panelGrid id="polawprowadzania" columns="6" >
                             <h:outputLabel value="nip/przy osobie fizycznej zostawić puste" style="font-weight: 700"/>
                             <h:outputLabel value="nazwa pełna" style="font-weight: 700"/>
                             <h:outputLabel value="nazwa skrocona" style="font-weight: 700"/>
                             <h:outputLabel value="kod pocztowy" style="font-weight: 700"/>
                             <h:outputLabel value="miejscowość" style="font-weight: 700"/>
+                            <h:outputText value=""/>
                             <p:inputText id="nipPole" value="#{KlView.selected.nip}" maxlength="20" style="width: 200px">
                                 <p:watermark for="nipPole" value="bez -" /> 
                                 <p:ajax event="blur" partialSubmit="true" listener="#{KlView.poszukajDuplikatNipWTrakcie()}" global="false"/>
@@ -42,13 +43,14 @@
                                 <p:ajax event="query" global="false"/>
                                 <p:ajax event="itemSelect" partialSubmit="true" global="false"/>
                             </p:autoComplete>
+                            <h:outputText value=""/>
 
                             <h:outputLabel value="ulica" style="font-weight: 700"/>
                             <h:outputLabel value="dom" style="font-weight: 700"/>
                             <h:outputLabel value="lokal" style="font-weight: 700"/>
                             <h:outputLabel value="kraj*" style="font-weight: 700"/>
                             <h:outputLabel value="email*" style="font-weight: 700"/>
-
+                            <h:outputText value=""/>
                             <p:inputText id="ulicaPole" value="#{KlView.selected.ulica}"   style="width: 200px" >
                                 <p:ajax event="blur" partialSubmit="true" global="false" listener="#{KlView.wstawkreske(2)}" update="@this"/>
                             </p:inputText>
@@ -74,6 +76,7 @@
                             <p:commandButton value="Edytuj" actionListener="#{KlView.edit()}" update=":formX :formY" icon="ui-icon-arrowrefresh-1-w" rendered="#{KlView.selected.id ne null}" style="width: 120px; margin-top: 5px;"/>
                             <h:outputText value=""/><h:outputText value=""/><h:outputText value=""/>
                             <p:commandButton value="aktualizuj GUS" actionListener="#{KlView.znajdzdaneregonAutomat(KlView.selected)}" style="width: 120px;margin-top: 5px;float: right;" update="@form" rendered="#{KlView.selected.id ne null}"/>
+                            <h:outputText value=""/>
                         </p:panelGrid>
 
                     </p:panel>
