--- a/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_rk_ewidencjaVAT_BO.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_rk_ewidencjaVAT_BO.xhtml
@@ -62,7 +62,7 @@
                 <p:inputText value="#{bilansWprowadzanieView.ewidencjaVatRK.numerwlasnydokfk}" style="width: 170px;" required="true" requiredMessage="brak nr wlasnego dokumentu" onblur="czypuste(this)">
                 </p:inputText>
             </p:panelGrid>
-            <p:panelGrid id="panelzewidencjavat" columns="8"  styleClass="uipanelGrid0" style="min-width: 470px; margin-top: 2%;">
+            <p:panelGrid id="panelzewidencjavat" columns="12"  styleClass="uipanelGrid0" style="min-width: 470px; margin-top: 2%;">
                 <h:outputText value="opis transakcji" style="width: 160px;"/>
                 <h:outputText value="rodzaj ewidencji" style="width: 110px;"/>
                 <h:outputText value="#{mgs.netto}" style="width: 95px;"/>
@@ -71,6 +71,7 @@
                 <h:outputText value="op/zw" style="width: 75px;"/>
                 <h:outputText value="50%" />
                 <h:outputText value="75%" />
+                <h:outputText value=""/><h:outputText value=""/><h:outputText value=""/><h:outputText value=""/>
                 <p:inputText id="opisvat" value="#{bilansWprowadzanieView.ewidencjaVatRK.opisvat}" style="width: 170px;"/>
                 <h:selectOneMenu value="#{bilansWprowadzanieView.ewidencjaVatRK.ewidencja}" converter="EVatwpisFKConv"
                                  onblur="$(this).removeClass('ui-state-focus');
