--- a/npkpir_23/web/manager/sub/terminy.xhtml
+++ b/npkpir_23/web/manager/sub/terminy.xhtml
@@ -24,10 +24,10 @@
                          <f:facet name="header">
                     <h:outputText value="Lista wprowadzonych terminów płatności #{WpisView.rokWpisuSt} "/>
                 </f:facet>
-                        <p:column headerText="rok">
+                        <p:column headerText="rok" sortBy="#{loop.zobowiazaniePK.rok}" sortOrder="descending" sortPriority="1" sortable="true">
                             <h:outputText value="#{loop.zobowiazaniePK.rok}" style="#{loop.zobowiazaniePK.rok eq WpisView.rokWpisuSt ? 'font-weight: 900; color: green;' : ''}"/>
                         </p:column>
-                        <p:column headerText="miesiac">
+                        <p:column headerText="miesiac" sortBy="#{loop.zobowiazaniePK.mc}" sortOrder="descending" sortPriority="2" sortable="true">
                         <h:outputText value="#{loop.zobowiazaniePK.mc}"  style="#{loop.zobowiazaniePK.rok eq WpisView.rokWpisuSt ? 'font-weight: 900; color: green;' : ''}"/>
                         </p:column>
                         <p:column headerText="Termin PIT">
