--- a/npkpir_23/web/wspolny/sub/faktura/faktura_stworz_normalna.xhtml
+++ b/npkpir_23/web/wspolny/sub/faktura/faktura_stworz_normalna.xhtml
@@ -8,7 +8,7 @@
     xmlns:ft="http://primefaces.prime.com.tr/facestrace"
     >
     <p:outputPanel rendered="#{fakturaView.fakturazwykla}">
-        <p:panelGrid layout="tabular" columns="6"  styleClass="polefaktury" layout="grid">
+        <p:panelGrid  columns="6"  styleClass="polefaktury" layout="grid">
             <h:outputText value="nr projektu dla faktury częściowej "/>
             <p:inputText value="#{fakturaView.selected.projektnumer}"  style="width: 100px;">
                 <p:ajax event="change" partialSubmit="true"/>
@@ -21,7 +21,7 @@
             <p:selectBooleanCheckbox value="#{fakturaView.selected.bilansowa}">
             </p:selectBooleanCheckbox>
         </p:panelGrid>
-         <p:panelGrid layout="tabular" columns="6"  styleClass="polefaktury" layout="grid">
+         <p:panelGrid  columns="6"  styleClass="polefaktury" layout="grid">
             <h:outputText value="licz od wartości brutto " style="color: #{fakturaView.selected.liczodwartoscibrutto ? 'blue':'initial'}"/>
             <p:selectBooleanCheckbox value="#{fakturaView.selected.liczodwartoscibrutto}">
                 <p:ajax event="change" update="akordeon:formstworz:rzadn akordeon:formstworz:rzadkorektyn @parent"/>
