--- a/npkpir_23/web/ksiegowa/sub/layoutNowy/west.xhtml
+++ b/npkpir_23/web/ksiegowa/sub/layoutNowy/west.xhtml
@@ -59,7 +59,7 @@
             <p:menu rendered="#{WpisView.biuroiszef eq true}">
                 <p:menuitem onclick="setBusyCursor();" oncomplete="removeBusyCursor();" global="true" value="PIT"  outcome="pitoblicz" icon="ui-icon-circle-arrow-e"/>
 <!--                    <p:menuitem onclick="setBusyCursor();" oncomplete="removeBusyCursor();" global="true" value="#{mgs.VAT}" icon="ui-icon-circle-arrow-e" outcome="vatzest" update="westWpis" rendered="#{WpisView.vatowiecPlde}"/>-->
-                <p:menuitem onclick="setBusyCursor();" oncomplete="removeBusyCursor();" global="true" value="VAT ewidencje" icon="ui-icon-circle-arrow-e" outcome="vatzest" update="westWpis" rendered="#{WpisView.vatowiecPlde}"/>
+                <p:menuitem onclick="setBusyCursor();" oncomplete="removeBusyCursor();" global="true" value="VAT ewidencje" icon="ui-icon-circle-arrow-e" outcome="vatzest" rendered="#{WpisView.vatowiecPlde}"/>
                 <p:menuitem onclick="setBusyCursor();" oncomplete="removeBusyCursor();" global="true" value="JPK VAT"  outcome="vatjpk" icon="ui-icon-circle-arrow-e" rendered="#{WpisView.podatnikObiekt.vatokres.size() gt 0 ? true : false}"/>
                 <p:menuitem onclick="setBusyCursor();" oncomplete="removeBusyCursor();" global="true" value="VAT-UE"  outcome="vatue" icon="ui-icon-circle-arrow-e" rendered="#{WpisView.isVatowiecUE()}"/>
 
