--- a/npkpir_23/web/ksiegowa/sub/dokument_wpis.xhtml
+++ b/npkpir_23/web/ksiegowa/sub/dokument_wpis.xhtml
@@ -44,7 +44,7 @@
             <p:growl life="3600"  id="mess_add" ><p:autoUpdate/></p:growl>
             <p:focus for="polawprowadzania1"/>
             <p:panelGrid layout="tabular"  columns="3" >
-                <p:panelGrid layout="tabular" id="polawprowadzania1" style="width: 300px;">
+                <p:panelGrid layout="tabular" columns="0" id="polawprowadzania1" style="width: 300px;">
                     <f:facet name="header">
                         <p:row >
                             <p:column>
@@ -103,7 +103,7 @@
                         </p:column>
                     </p:row>
                 </p:panelGrid>
-                <p:panelGrid layout="tabular" id="panelTabelaNBP" style="width: 270px;">
+                <p:panelGrid layout="tabular" columns="0" id="panelTabelaNBP" style="width: 270px;">
                     <f:facet name="header">
                         <p:row rendered="#{DokumentView.selDokument.walutadokumentu.symbolwaluty ne 'PLN'}">
                             <p:column width="110">
@@ -132,7 +132,7 @@
                        
                     </p:row>
                 </p:panelGrid>
-                <p:panelGrid layout="tabular" id="panelcechy" style="width: 100px;">
+                <p:panelGrid layout="tabular" columns="0" id="panelcechy" style="width: 100px;">
                      <f:facet name="header">
                          <p:row>
                                <p:column>
@@ -147,7 +147,7 @@
                         </p:row>
                 </p:panelGrid>
             </p:panelGrid>
-            <p:panelGrid layout="tabular" id="polawprowadzania" style="width: 450px;">
+            <p:panelGrid layout="tabular"  columns="0" id="polawprowadzania" style="width: 450px;">
                 <f:facet name="header">
                     <p:row >
                         <p:column>
@@ -264,7 +264,7 @@
                         </h:selectOneMenu><br/>
                     </p:column>
                 </p:dataTable>
-                <p:panelGrid layout="tabular" id="tabelapkpir2" >
+                <p:panelGrid layout="tabular" columns="0" id="tabelapkpir2" >
                     <f:facet name="header">
                         <p:row >
                             <p:column>
@@ -416,7 +416,7 @@
                 </p:autoComplete>
             </p:outputPanel>
             <p:outputPanel id="nowypanelsrodki" style="width: 900px;">
-                <p:panelGrid layout="tabular" id="tabelasrodkitrwaleOT" rendered="#{DokumentView.renderujwysz}" style="margin-top: 5px;"> 
+                <p:panelGrid layout="tabular" columns="0" id="tabelasrodkitrwaleOT" rendered="#{DokumentView.renderujwysz}" style="margin-top: 5px;"> 
                     <f:facet name="header">
                         <p:row>
                             <p:column>
@@ -513,7 +513,7 @@
                 </p:dataTable>
             </p:panel>
             <!--pola ewidencji VAT-->
-            <p:panelGrid layout="tabular" id="ostatnipanel" style="width: 400px;">
+            <p:panelGrid layout="tabular" columns="0" id="ostatnipanel" style="width: 400px;">
                 <f:facet name="header">
                     <p:row >
                         <p:column>
