--- a/npkpir_23/web/ksiegowa/sub/zestawienieRok_wykres.xhtml
+++ b/npkpir_23/web/ksiegowa/sub/zestawienieRok_wykres.xhtml
@@ -13,9 +13,9 @@
                 };
             }
         </script>-->
-<p:chart type="line" model="#{zestawienieView.linearModel}" 
+<!--<p:chart type="line" model="#{zestawienieView.linearModel}" 
                      style="width:1000px; height: 600px;" 
-                     id="chart"  rendered="#{WpisView.ryczalt0ksiega1}"/>
+                     id="chart"  rendered="#{WpisView.ryczalt0ksiega1}"/>-->
 
 <!--<p:chart type="line" model="{ZestawienieView.linearModel}" 
                      style="width:1000px; height: 600px;" 
