--- a/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_wpisywanie.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_wpisywanie.xhtml
@@ -129,7 +129,7 @@
                 <!--                nagłówek dokumentu-->
                 <p:panelGrid layout="tabular" id="panelzkwotami" columns="2" >
                     <p:panelGrid layout="tabular"  columns="1"  >
-                        <p:panelGrid layout="tabular" id="paneldatydokumentu">
+                        <p:panelGrid layout="tabular" id="paneldatydokumentu" columns="0">
                             <f:facet name="header">
                                 <p:row>
                                     <p:column>
@@ -251,7 +251,7 @@
                                 </p:column>
                             </p:row>
                         </p:panelGrid>
-                        <p:panelGrid layout="tabular" id="paneldaneogolnefaktury">
+                        <p:panelGrid layout="tabular" id="paneldaneogolnefaktury"  columns="0">
                             <f:facet name="header">
                                 <p:row>
                                     <p:column>
@@ -305,7 +305,7 @@
                                 </p:column>
                             </p:row>
                         </p:panelGrid>
-                        <p:panelGrid layout="tabular" id="panelzkwotamidok">
+                        <p:panelGrid layout="tabular" id="panelzkwotamidok"  columns="0">
                             <f:facet name="header">
                                 <p:row>
                                     <p:column>
@@ -374,7 +374,7 @@
                             <h:outputText value="#{planKontView.infozebrakslownikowych}" style="color: red; font-weight: 900;"/>
                         </p:panelGrid>-->
                         <p:panelGrid layout="tabular" columns="2" id="panelwalutowy" style="min-width: 100%;"  styleClass="uipanelGrid0" >
-                            <p:panelGrid layout="tabular" id="panelwalutowywybor" style="min-width: 20%;">
+                            <p:panelGrid layout="tabular" id="panelwalutowywybor" style="min-width: 20%;"  columns="0">
                                 <f:facet name="header">
                                     <p:row>
                                         <p:column>
@@ -412,7 +412,7 @@
                                     </p:column>
                                 </p:row>
                             </p:panelGrid>
-                            <p:panelGrid layout="tabular" id="panelTabelaNBP" style="min-width: 80%;">
+                            <p:panelGrid layout="tabular" id="panelTabelaNBP" style="min-width: 80%;"  columns="0">
                                 <f:facet name="header">
                                     <p:row rendered="#{dokfkView.pokazRzadWalutowy || (dokfkView.selected.tabelanbp.waluta.symbolwaluty ne 'PLN' and dokfkView.selected.rodzajedok.kategoriadokumentu != 0)}">
                                         <p:column>
