--- a/npkpir_23/web/wspolny/sub/faktura.xhtml
+++ b/npkpir_23/web/wspolny/sub/faktura.xhtml
@@ -66,7 +66,7 @@
         <ui:include src="faktura/faktura_archiwum.xhtml"/>
         <ui:include src="faktura/faktura_okresowe.xhtml"/>
         <ui:include src="faktura/faktura_okresowe_2.xhtml"/>
-<!--        <ui:include src="faktura/faktura_okresowe_3.xhtml"/>-->
+        <ui:include src="faktura/faktura_okresowe_3.xhtml"/>
         <ui:include src="faktura/faktura_zestawienie.xhtml"/>
         <ui:include src="faktura/faktura_kadry.xhtml"/>
     </p:tabView>
