--- a/npkpir_23/web/wspolny/sub/fakturarozrach/faktura_rozrachunki.xhtml
+++ b/npkpir_23/web/wspolny/sub/fakturarozrach/faktura_rozrachunki.xhtml
@@ -93,7 +93,7 @@
                     <p:column>
                         <p:inputNumber value="#{fakturaRozrachunkiView.selected.kwotapln}" symbol=" zł" required="true" 
                                         requiredMessage="Brak kwoty - uzupełnij" style="text-align: right;" symbolPosition="s" signPosition="p"   
-                                         inputStyle="text-align: right;" decimalPlaces="2" minValue="-10000000" styleClass="wiersznetto"/> 
+                                         inputStyle="text-align: right;" decimalPlaces="2"  styleClass="wiersznetto"/> 
                     </p:column>
                     <p:column>
                         <p:autoComplete value="#{fakturaRozrachunkiView.selected.kontrahent}" completeMethod="#{fakturaRozrachunkiView.completeKL}"
@@ -122,7 +122,7 @@
                     <p:column>
                         <p:inputNumber value="#{fakturaRozrachunkiView.selected.kurs}" symbol=" zł" required="true" 
                                         requiredMessage="Brak kwoty - uzupełnij" style="text-align: right;" symbolPosition="s" signPosition="p"   
-                                         inputStyle="text-align: right;" decimalPlaces="4" minValue="-10000000" styleClass="wiersznetto"/> 
+                                         inputStyle="text-align: right;" decimalPlaces="4" styleClass="wiersznetto"/> 
                     </p:column>
                 </p:row>
             </p:panelGrid>
